force-app/main/default/objects/Lead/fields/Ages_of_Children__c.field-meta.xml
<CustomField>
    <fullName>Ages_of_Children__c</fullName>
    <label>Ages of Children</label>
    <length>255</length>
    <type>Text</type>
</CustomField>