force-app/main/default/objects/Lead/fields/Answered_Remark__c.field-meta.xml
<CustomField>
    <fullName>Answered_Remark__c</fullName>
    <label>Answered Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>