force-app/main/default/objects/Lead/fields/Answered_Status__c.field-meta.xml
<CustomField>
    <fullName>Answered_Status__c</fullName>
    <label>Answered Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>