force-app/main/default/objects/Lead/fields/Assignment_Group__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Group__c</fullName>
    <label>Assignment Group</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>