force-app/main/default/objects/Lead/fields/Banglore_Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Banglore_Lead_Number__c</fullName>
    <label>Banglore Lead Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>