force-app/main/default/objects/Lead/fields/Banglore_RRId__c.field-meta.xml
<CustomField>
    <fullName>Banglore_RRId__c</fullName>
    <formula>MOD(  Banglore_Lead_Number__c ,1) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banglore RRId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>