force-app/main/default/objects/Lead/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aeronautical</fullName>
            </value>
            <value>
                <fullName>Automobile</fullName>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>ECE</fullName>
            </value>
            <value>
                <fullName>EEE</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Robotics</fullName>
            </value>
            <value>
                <fullName>Values</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Statistics</fullName>
            </value>
            <value>
                <fullName>Accounting &amp; Finance</fullName>
            </value>
            <value>
                <fullName>Economics</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Banking &amp; Insurance</fullName>
            </value>
            <value>
                <fullName>B.sc. IT</fullName>
            </value>
            <value>
                <fullName>B.sc. Computer Science</fullName>
            </value>
            <value>
                <fullName>B.sc. Chemistry</fullName>
            </value>
            <value>
                <fullName>B.sc. Physics</fullName>
            </value>
            <value>
                <fullName>B.sc. Biotechnology</fullName>
            </value>
            <value>
                <fullName>Computer Graphics</fullName>
            </value>
            <value>
                <fullName>Database Management Systems (DBMS)</fullName>
            </value>
            <value>
                <fullName>Internet Technologies</fullName>
            </value>
            <value>
                <fullName>IT Technologies</fullName>
            </value>
            <value>
                <fullName>Management Information System (MIS)</fullName>
            </value>
            <value>
                <fullName>Music and Video Processing</fullName>
            </value>
            <value>
                <fullName>Network Systems</fullName>
            </value>
            <value>
                <fullName>Systems Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>