force-app/main/default/objects/Lead/fields/Budget_Score__c.field-meta.xml
<CustomField>
    <fullName>Budget_Score__c</fullName>
    <formula>IF(Has_Budget__c = true, 5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>