force-app/main/default/objects/Lead/fields/Call_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Sub_Status__c</fullName>
    <label>Call Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Already A Customer</fullName>
            </value>
            <value>
                <fullName>Invalid Phone Number</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>