force-app/main/default/objects/Lead/fields/Canada_Skilled_job_offer__c.field-meta.xml
<CustomField>
    <fullName>Canada_Skilled_job_offer__c</fullName>
    <description>Do you have a skilled job offer from a Canadian employer?</description>
    <label>Canada Skilled job offer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>