force-app/main/default/objects/Lead/fields/Chennai_PR_Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Chennai_PR_Lead_Number__c</fullName>
    <label>Chennai PR Lead Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>