force-app/main/default/objects/Lead/fields/Chennai_PR_RRId__c.field-meta.xml
<CustomField>
    <fullName>Chennai_PR_RRId__c</fullName>
    <formula>MOD( Chennai_PR_Lead_Number__c ,2) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chennai PR RRId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>