force-app/main/default/objects/Lead/fields/Chennai_TRV_Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Chennai_TRV_Lead_Number__c</fullName>
    <label>Chennai TRV Lead Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>