force-app/main/default/objects/Lead/fields/Chennai_TRV_RRId__c.field-meta.xml
<CustomField>
    <fullName>Chennai_TRV_RRId__c</fullName>
    <formula>MOD( Chennai_TRV_Lead_Number__c ,1) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chennai TRV RRId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>