force-app/main/default/objects/Lead/fields/Close_Family_member_as_Canandian_Citizen__c.field-meta.xml
<CustomField>
    <fullName>Close_Family_member_as_Canandian_Citizen__c</fullName>
    <description>Do you have a close family member who is a Canadian citizen or permanent resident, who is currently living in Canada and is 18 years of age or older?</description>
    <label>Close Family member as Canandian Citizen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>