force-app/main/default/objects/Lead/fields/Coimbatore_Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Coimbatore_Lead_Number__c</fullName>
    <label>Coimbatore Lead Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>