force-app/main/default/objects/Lead/fields/Coimbatore_RRId__c.field-meta.xml
<CustomField>
    <fullName>Coimbatore_RRId__c</fullName>
    <formula>MOD( Coimbatore_Lead_Number__c ,2) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coimbatore RRId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>