force-app/main/default/objects/Lead/fields/Consultation_Fees__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Fees__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Consultation Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>