force-app/main/default/objects/Lead/fields/Current_Domain__c.field-meta.xml
<CustomField>
    <fullName>Current_Domain__c</fullName>
    <label>Current Domain</label>
    <length>50</length>
    <type>Text</type>
</CustomField>