force-app/main/default/objects/Lead/fields/CustomState__c.field-meta.xml
<CustomField>
    <fullName>CustomState__c</fullName>
    <label>City/Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Cochin</fullName>
            </value>
            <value>
                <fullName>Coimbatore</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Tirunelveli</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>