force-app/main/default/objects/Lead/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <label>Date of Birth(DD/MM/YYYY)</label>
    <type>Date</type>
</CustomField>