force-app/main/default/objects/Lead/fields/Decision_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Decision_Timeframe__c</fullName>
    <label>Decision Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>3-6 months</fullName>
            </value>
            <value>
                <fullName>6-12 months</fullName>
            </value>
            <value>
                <fullName>Next year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>