force-app/main/default/objects/Lead/fields/Decision_Timeframe_Score__c.field-meta.xml
<CustomField>
    <fullName>Decision_Timeframe_Score__c</fullName>
    <formula>IF( TEXT(Decision_Timeframe__c) = &apos;Immediate&apos;,5,IF(TEXT(Decision_Timeframe__c)= &apos;3-6 months&apos;,4,IF(TEXT(Decision_Timeframe__c) = &apos;6-12 months&apos;,2,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Timeframe Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>