force-app/main/default/objects/Lead/fields/Demo_Remark__c.field-meta.xml
<CustomField>
    <fullName>Demo_Remark__c</fullName>
    <label>Demo Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>