force-app/main/default/objects/Lead/fields/Discovery_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Demo_Date__c</fullName>
    <label>Discovery Date</label>
    <type>Date</type>
</CustomField>