force-app/main/default/objects/Lead/fields/English_Proficiency_Listening__c.field-meta.xml
<CustomField>
    <fullName>English_Proficiency_Listening__c</fullName>
    <label>English Proficiency (Listening)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>