force-app/main/default/objects/Lead/fields/Evaluation_Score__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Score__c</fullName>
    <label>Evaluation Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>