force-app/main/default/objects/Lead/fields/Evaluation_Score_V1__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Score_V1__c</fullName>
    <formula>Title_Job_Title_Score__c +  Qualification_Score__c +  Experience_Score__c + Ilets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is out of 25 and Any score greater that 15 is Eligible otherwise Not Eligible</inlineHelpText>
    <label>Evaluation Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>