force-app/main/default/objects/Lead/fields/Existing_Customer_Remark__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer_Remark__c</fullName>
    <label>Existing Customer Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>