force-app/main/default/objects/Lead/fields/Experience_Score__c.field-meta.xml
<CustomField>
    <fullName>Experience_Score__c</fullName>
    <formula>IF( Experience__c  == null ,0,6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Maximum score can be 6</inlineHelpText>
    <label>Experience Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>