force-app/main/default/objects/Lead/fields/File_Number__c.field-meta.xml
<CustomField>
    <fullName>File_Number__c</fullName>
    <displayFormat>L-{000000}</displayFormat>
    <label>File Number</label>
    <type>AutoNumber</type>
</CustomField>