force-app/main/default/objects/Lead/fields/Follow_Up_Comments__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Comments__c</fullName>
    <label>Follow Up Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>