force-app/main/default/objects/Lead/fields/Hyderabad_RRId__c.field-meta.xml
<CustomField>
    <fullName>Hyderabad_RRId__c</fullName>
    <formula>MOD( Hyderabad_Lead_Number__c ,1) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hyderabad RRId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>