force-app/main/default/objects/Lead/fields/Ilets__c.field-meta.xml
<CustomField>
    <fullName>Ilets__c</fullName>
    <inlineHelpText>Maximum Score can be 9</inlineHelpText>
    <label>IELTS Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>