force-app/main/default/objects/Lead/fields/InValid_Remark__c.field-meta.xml
<CustomField>
    <fullName>InValid_Remark__c</fullName>
    <label>Invalid Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>