force-app/main/default/objects/Lead/fields/IsLeadFormUpdated__c.field-meta.xml
<CustomField>
    <fullName>IsLeadFormUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsLeadFormUpdated</label>
    <type>Checkbox</type>
</CustomField>