force-app/main/default/objects/Lead/fields/ISM__c.field-meta.xml
<CustomField>
    <fullName>ISM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ISM</label>
    <referenceTo>Assignment_Group_Member__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>