force-app/main/default/objects/Lead/fields/Kochi_Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Kochi_Lead_Number__c</fullName>
    <label>Kochi Lead Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>