force-app/main/default/objects/Lead/fields/Kochi_RRId__c.field-meta.xml
<CustomField>
    <fullName>Kochi_RRId__c</fullName>
    <formula>MOD( Kochi_Lead_Number__c ,1) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kochi RRId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>