force-app/main/default/objects/Lead/fields/Language_Remark__c.field-meta.xml
<CustomField>
    <fullName>Language_Remark__c</fullName>
    <label>Language Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>