force-app/main/default/objects/Lead/fields/Lead_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Assigned_Date__c</fullName>
    <label>Lead Assigned Date</label>
    <type>Date</type>
</CustomField>