force-app/main/default/objects/Lead/fields/Lead_Assigned_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Assigned_Time__c</fullName>
    <label>Lead Assigned Time</label>
    <type>Time</type>
</CustomField>