force-app/main/default/objects/Lead/fields/Lead_Capture_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Capture_Date__c</fullName>
    <label>Lead Capture Date</label>
    <type>Date</type>
</CustomField>