force-app/main/default/objects/Lead/fields/Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Number__c</fullName>
    <description>Lead Number (Auto incrementing) for new Lead</description>
    <displayFormat>{0}</displayFormat>
    <inlineHelpText>Auto generated and aut0-incrementing</inlineHelpText>
    <label>Lead Number</label>
    <type>AutoNumber</type>
</CustomField>