force-app/main/default/objects/Lead/fields/Lead_Substatus__c.field-meta.xml
<CustomField>
    <fullName>Lead_Substatus__c</fullName>
    <label>Lead Substatus</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Price To High</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Called</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Partial Eligible</fullName>
            </value>
            <value>
                <fullName>Request sent</fullName>
            </value>
            <value>
                <fullName>Details Received</fullName>
            </value>
            <value>
                <fullName>Requested Modification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>