force-app/main/default/objects/Lead/fields/Nearest_Branch__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Branch__c</fullName>
    <label>Nearest Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>