force-app/main/default/objects/Lead/fields/NOC__c.field-meta.xml
<CustomField>
    <fullName>NOC__c</fullName>
    <label>NOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>