force-app/main/default/objects/Lead/fields/Non_Intrested_Reason__c.field-meta.xml
<CustomField>
    <fullName>Non_Intrested_Reason__c</fullName>
    <label>Non Intrested Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>