force-app/main/default/objects/Lead/fields/Not_Answered__c.field-meta.xml
<CustomField>
    <fullName>Not_Answered__c</fullName>
    <label>Not Answered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Temporarily Disconnected</fullName>
            </value>
            <value>
                <fullName>Switch off</fullName>
            </value>
            <value>
                <fullName>Not reachable</fullName>
            </value>
            <value>
                <fullName>Ringing no response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>