force-app/main/default/objects/Lead/fields/Not_Answered_Remark__c.field-meta.xml
<CustomField>
    <fullName>Not_Answered_Remark__c</fullName>
    <label>Not Answered Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>