force-app/main/default/objects/Lead/fields/Not_Interested_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Interested_Reason__c</fullName>
    <label>Not Interested Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>